plugins/transformation/response-transformer/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  response-transformer
  annotations:
    konghq.com/plugins: response-transformer
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /responsetransformer
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 1027
